--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -9,6 +9,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
+  <radyou-app></radyou-app>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark indigo fixed-top">
       <div class="container">
@@ -41,11 +42,11 @@
         </div>
       </div>
     </nav>
+  </header>
+  <main>
     <div id="intro" class="view">
       <div class="full-bg-img"></div>
     </div>
-  </header>
-  <main>
   </main>
   <footer>
   </footer>
